[package]
name = "bevy_jam_3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
  "bevy_asset",         # Assets management
  "bevy_scene",         # Scenes management
  "bevy_gilrs",         # Gamepad input support
  "bevy_audio",         # Builtin audio
  "bevy_winit",         # Window management
  "animation",          # Animation support
  "x11",                # Linux: Support X11 windowing system
  "filesystem_watcher", # Asset hot-reloading
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  "png",
  "vorbis",
  "wayland",              # Linux: Support Wayland windowing system
  "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
  "serialize",            # Support for `serde` Serialize/Deserialize
  "bevy_dynamic_plugin",  # Support for loading of `DynamicPlugin`s
  "jpeg",
  "flac",
  "mp3",
  "wav",
  "dynamic_linking",      # Dynamic linking for faster compile-times
  #"trace",        # Enable tracing for performance measurement
  #"trace_tracy",  # Tracing using `tracy`
  #"trace_chrome", # Tracing using the Chrome format
  #"wgpu_trace",   # WGPU/rendering tracing
]

[dependencies]
bevy_ecs_tilemap = "0.10"
bevy_rapier2d = "0.21"
leafwing-input-manager = "0.9"
bevy_turborand = "0.5"
